SERVER-4536 Support appending an int64_t to a BSONObjBuilder